<resources>
    <string name="app_name">FamilyMap</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="server_host_prompt">Server Host:</string>
    <string name="server_port_prompt">Server Port:</string>
    <string name="username_prompt">Username:</string>
    <string name="password_prompt">Password:</string>
    <string name="first_name_prompt">First Name:</string>
    <string name="last_name_prompt">Last Name:</string>
    <string name="email_prompt">Email:</string>
    <string name="gender_prompt">Gender:</string>
    <string name="male_prompt">Male</string>
    <string name="female_prompt">Female</string>
    <string name="register_button_label">Register</string>
    <string name="sign_in_button_label">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_marker_prompt">Select a marker to see event details</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_search">Search</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>