<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="3">

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="end"
                        android:text="@string/server_host_prompt"/>
                    <EditText
                        android:id="@+id/edit_text_server_host"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:inputType="text"
                        android:text="localhost"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="end"
                        android:text="@string/server_port_prompt" />
                    <EditText
                        android:id="@+id/edit_text_server_port"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:inputType="text"
                        android:text="8080"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="end"
                        android:text="@string/username_prompt" />
                    <EditText
                        android:id="@+id/edit_text_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:inputType="text"
                        android:text="sheila"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="end"
                        android:text="@string/password_prompt"/>
                    <EditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:inputType="textPassword"
                        android:text="parker"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="end"
                        android:text="@string/first_name_prompt"/>
                    <EditText
                        android:id="@+id/edit_text_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:inputType="textPersonName"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="end"
                        android:text="@string/last_name_prompt"/>
                    <EditText
                        android:id="@+id/edit_text_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:inputType="textPersonName"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="end"
                        android:text="@string/email_prompt"/>
                    <EditText
                        android:id="@+id/edit_text_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:inputType="textEmailAddress"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="end"
                        android:text="@string/gender_prompt"/>
                    <RadioGroup
                        android:id="@+id/gender_radio_group"
                        android:orientation="horizontal"
                        android:checkedButton="@+id/male_radio_button">
                        <RadioButton
                            android:id="@+id/male_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male_prompt" />
                        <RadioButton
                            android:id="@+id/female_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female_prompt" />
                    </RadioGroup>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_button_label"
                    android:layout_margin="10dp"/>

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button_label"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>